31 October 2007: Wouter
	- cache-max-ttl config option.
	- building outside sourcedir works again.

30 October 2007: Wouter
	- fixup assertion failure that relied on compressed names to be
	  smaller than uncompressed names. A packet from comrite.com was seen
	  to be compressed to a larger size. Added it as unit test.
	- quieter logging at low verbosity level for common tcp messages.
	- no greedy TTL update.

23 October 2007: Wouter
	- fixup (grand-)parent problem for dnssec-lameness detection.
	- fixup tests to do additional section processing for lame replies,
	  since the detection needs that.
	- no longer trust in query section in reply during dnssec lame detect.
	- dnssec lameness does not make the server never ever queried, but
	  non-preferred. If no other servers exist or answer, the dnssec lame
	  server is used; the fastest dnssec lame server is chosen.
	- added test then when trust anchor cannot be primed (nodata), the
	  insecure mode from unbound works.
	- Fixup max queries per thread, any more are dropped.

22 October 2007: Wouter
	- added donotquerylocalhost config option. Can be turned off for
	  out test cases.
	- ISO C compat changes.
	- detect RA-no-AA lameness, as LAME.
	- DNSSEC-lameness detection, as LAME.
	  See notes in requirements.txt for choices made.
	- tests for lameness detection.
	- added all to make test target; need unbound for fwd tests.
	- testbound does not pollute /etc/unbound.

19 October 2007: Wouter
	- added configure (and its files) to svn, so that the trunk is easier
	  to use. ./configure, config.guess, config.sub, ltmain.sh,
	  and config.h.in.
	- added yacc/lex generated files, util/configlexer.c, 
	  util/configparser.c util/configparser.h, to svn. 
	- without lex no attempt to use it.
	- unsecure response validation collated into one block.
	- remove warning about const cast of cfgfile name.
	- outgoing-interfaces can be different from service interfaces.
	- ldns-src configure is done during unbound configure and